<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReportDetailsFragment">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium_margin">

        <TextView
                android:id="@+id/reportLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/sizeLabel"
                    android:text="@string/size_label"
                    style="@style/ReportDetailsLabel" />

            <TextView
                    android:id="@+id/size"
                    style="@style/ReportDetailsValueText" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/activityLabel"
                    android:text="@string/activity_label"
                    style="@style/ReportDetailsLabel" />

            <TextView
                    android:id="@+id/activity"
                    style="@style/ReportDetailsValueText" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/locationLabel"
                    android:text="@string/location_label"
                    style="@style/ReportDetailsLabel" />

            <TextView
                    android:id="@+id/location"
                    style="@style/ReportDetailsValueText" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/unitLabel"
                    android:text="@string/unit_label"
                    style="@style/ReportDetailsLabel" />

            <TextView
                    android:id="@+id/unit"
                    style="@style/ReportDetailsValueText" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/timeLabel"
                    android:text="@string/time_label"
                    style="@style/ReportDetailsLabel" />

            <TextView
                    android:id="@+id/time"
                    style="@style/ReportDetailsValueText" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/equipmentLabel"
                    android:text="@string/equipment_label"
                    style="@style/ReportDetailsLabel" />

            <TextView
                    android:id="@+id/equipment"
                    style="@style/ReportDetailsValueText" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/remarksLabel"
                    android:text="@string/remarks_label"
                    style="@style/ReportDetailsLabel" />

            <TextView
                    android:id="@+id/remarks"
                    style="@style/ReportDetailsValueText" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/createdLabel"
                    android:text="@string/created_label"
                    style="@style/ReportDetailsLabel" />

            <TextView
                    android:id="@+id/created"
                    style="@style/ReportDetailsValueText" />

        </TableRow>

    </TableLayout>

</ScrollView>