<resources>
    <string name="app_name">SALUTE Report</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">SALUTE Reports</string>

    <string name="next_button_text">Next</string>
    <string name="back_button_text">Back</string>

    <string name="size_title">Size</string>
    <string name="size_description">Size/Who: Expressed as a quantity, an echelon, or size.</string>

    <string name="activity_title">Activity</string>
    <string name="activity_description">Activity/What: This line is the focal point of the report and relates to the PIR or important non-PIR information being reported. It should be a concise bullet statement.</string>

    <string name="location_title">Location</string>
    <string name="location_description">Location/Where: Generally a grid coordinate, but can include an address if appropriate.</string>
    <string name="no_gps_device">No GPS detected in device!</string>
    <string name="turn_on_gps">Please turn on GPS</string>
    <string name="select_a_location">A valid location needs to be selected from the map or entered in the text box</string>
    <string name="enable_gps_message">Location (GPS) is disabled. It is helpful for getting the Report location from the map.
    \n\nDo you want to enable it now?</string>
    <string name="enable_gps_positive_button">Enable GPS</string>
    <string name="enable_gps_negative_button">No</string>

    <string name="unit_title">Unit</string>
    <string name="unit_description">Unit/Who: This entry identifies who is performing the activity described. Include the complete designation of a military unit, identification of a civilian or insurgent group, or the full name of an individual, as appropriate.</string>

    <string name="time_title">Time</string>
    <string name="time_description">Time/When: For a future event, this is when the activity will initiate. Ongoing events are reported as such.</string>
    <string name="ongoing">Ongoing</string>
    <string name="select_date_time">Select Date/Time</string>
    <string name="date_time_label">Date/Time:</string>

    <string name="equipment_title">Equipment</string>
    <string name="equipment_description">Equipment/How: The information reported in this entry clarifies, completes, and/or expands upon information reported in any of the previous entries. It includes information concerning equipment involved, tactics used, and any other essential elements of information.</string>

    <string name="remarks_title">Remarks</string>
    <string name="remarks_description">Use this entry to report the source of the information, whether a person, a CED, open-source media, or other source.</string>

    <string name="create_report_button_text">Create Report</string>

    <string name="created_report_toast_message">Created a SALUTE report and sent it to Sync Monkey</string>
    <string name="error_creating_report_toast_message">Could not save the SALUTE report. Please try again or contact the developer if the issue persists.</string>
    <string name="sync_monkey_error_toast_message">Saved the SALUTE report, but could not find the Sync Monkey app to upload it to Azure</string>

    <string name="share_button_title">Share</string>

    <!-- Name Dialog Strings -->
    <string name="name_dialog_title">SALUTE Report Name</string>
    <string name="activity_title_text">Activity:</string>
    <string name="created_title_text">Created:</string>
    <string name="time_title_text">Occurs At:</string>

    <!-- Report Details Strings  -->
    <string name="report_details_fragment_label">Report Details</string>
    <string name="size_label">Size:</string>
    <string name="activity_label">Activity:</string>
    <string name="location_label">Location:</string>
    <string name="unit_label">Unit:</string>
    <string name="time_label">Time:</string>
    <string name="equipment_label">Equipment:</string>
    <string name="remarks_label">Remarks:</string>
    <string name="created_label">Created:</string>
    <string name="delete_report_dialog_title">Delete report(s)?</string>
    <string name="delete_report_dialog_message">Are you sure you want to delete these SALUTE reports?</string>
    <string name="none_selected_dialog_title">Nothing selected</string>
    <string name="none_selected_dialog_message">This action cannot be completed as there are no reports selected.</string>
    <string name="get_from_map_switch_text">Get from Map</string>

    <!-- Location Fragment Strings -->
    <string name="map_marker_title">Selected Location</string>
    <string name="select_optionbar_text">Select</string>
    <string name="delete_optionbar_title">Delete</string>
    <string name="share_optionbar_title">Share</string>
    <string name="deselect_optionbar_title">Deselect</string>

</resources>
