<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ThirdFragmentLocation">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/title"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_weight="1"
                android:text="@string/location_title" />

        <Switch
                android:id="@+id/switch_get_from_map"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/get_from_map_switch_text"
                android:textSize="16sp" />

    </LinearLayout>

    <TextView
            android:id="@+id/description"
            style="@style/TextSample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_description" />

    <EditText
            android:id="@+id/editText"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    <com.chesapeaketechnology.salute.CustomMapFragment
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:visibility="gone" />

    <Button
            android:id="@+id/button_next"
            style="@style/NextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp" />


</LinearLayout>