<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

    <EditText
            android:id="@+id/salute_report_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x_small_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginRight="@dimen/x_small_margin"
            android:layout_marginBottom="@dimen/x_small_margin"
            android:inputType="text" />

</LinearLayout>